--- a/index.html
+++ b/index.html
@@ -1,12 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+    <title>画板</title>
 </head>
+
 <body>
-    
+    <div id="canvas"></div>
+    <script>
+        // let canvas = document.getElementById('canvas')
+        canvas.onmousemove = (e) => {
+            // console.log(e)
+            let div = document.createElement('div')
+            div.style.position = 'absolute'
+            div.style.left = e.clientX + 'px'
+            div.style.top = e.clientY + 'px' 
+            div.style.height = '6px'
+            div.style.width = '6px'
+            canvas.appendChild(div)
+            div.style.marginLeft = '-3px'
+            div.style.marginTop = '-3px'
+            div.style.borderRadius = '6px'
+            div.style.background = 'black'
+        } 
+    </script>
 </body>
+
 </html>
